# MLPipelineHolder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  unit-tests.yml
examples/: comprehensive_pipeline.ipynb
src/: __init__.py  main.py
src/mlpipelineholder/: __init__.py  artifact_store.py  exceptions.py  execution_block.py  function_registry.py  gate_block.py  logger.py  models.py  pipeline_handler.py  serializers.py
tests/: test_execution_block.py  test_pipeline_handler.py  test_save_load.py
